Change POST response to 201. Add form to UI. Edit directive not directly talking to model

--- a/src/main/resources/assets/css/main.css
+++ b/src/main/resources/assets/css/main.css
@@ -6,6 +6,10 @@ body {
     background-image: url('background.jpg');
 }
 
+.add-form button {
+    margin-left: 1em;
+}
+
 .todo-table tr {
     height: 52px;
 }
