--- a/src/main/resources/assets/css/main.css
+++ b/src/main/resources/assets/css/main.css
@@ -3,35 +3,44 @@
 }
 
 body {
-    background-image: url('background.jpg');
+    background-image: url('../img/background.jpg');
+}
+
+.attribution {
+    float: right;
+    font-size: xx-small
 }
 
 .add-form button {
     margin-left: 1em;
 }
 
-.todo-table tr {
+.todo-panel tr {
     height: 52px;
 }
 
-.todo-table td {
+.todo-panel td {
     vertical-align: middle !important;
 }
 
-.todo-table .editable {
+.todo-panel .editable {
     cursor: pointer;
     padding-right: 5em;
 }
 
-.todo-table .action-cell {
+.todo-panel .action-cell {
     width: 2em;
 }
 
-.todo-table .hover-action {
+.todo-panel .share {
+    float: right;
+}
+
+.todo-panel .hover-action {
     visibility: hidden;
     cursor: pointer;
 }
 
-.todo-table tr:hover .hover-action {
+.todo-panel tr:hover .hover-action {
     visibility: visible;
 }
